# sludge

./: .gitignore  Cargo.toml  README.md  install.sh  slag.spec
assets/: dev.sludge.app.SearchProvider.service  dev.sludge.app.desktop  dev.sludge.app.search-provider.ini  dev.sludge.app.service  slag.desktop
packaging/: README.md  build-deb.sh  build-rpm.sh  sludge.spec
packaging/debian/: changelog  control  copyright  rules
packaging/debian-scripts/: postinst
src/: db.rs  main.rs  mem.rs  search_provider.rs
src/slack/: client.rs  helpers.rs  mod.rs  socket.rs
src/ui/: app.rs  autocomplete.rs  channel_sidebar.rs  emoji_picker.rs  image_viewer.rs  login.rs  message_input.rs  message_view.rs  mod.rs  preferences.rs  send_button.rs  thread_panel.rs
