[package]
name = "sludge"
version = "0.2.1"
edition = "2024"
description = "A native GTK4/libadwaita Slack client for the Linux desktop"
license = "GPL-3.0-or-later"
repository = "https://github.com/emtek/sludge"

[dependencies]
bytes = "1"
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6"
gtk4 = { version = "0.11.1", features = ["v4_14"] }
libadwaita = { version = "0.9.1", features = ["v1_4"] }
serde_json = "1.0.149"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
serde = { version = "1", features = ["derive"] }
slacko = "0.2"
surrealdb = { version = "3", features = ["kv-surrealkv"] }
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
emojis = "0.8.0"
libc = "0.2"
pulldown-cmark = "0.13.3"
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
futures-util = "0.3.32"
emoji = "0.2.1"
zbus = { version = "5", default-features = false, features = ["tokio"] }
