[package]
name = "sludge"
version = "0.2.4"
edition = "2024"
description = "A native GTK4/libadwaita Slack client for the Linux desktop"
license = "GPL-3.0-or-later"
repository = "https://github.com/emtek/sludge"

[dependencies]
bytes = "1"
chrono = { version = "0.4.44", features = ["serde"] }
dirs = "6"
gtk4 = { version = "0.11.1", features = ["v4_14"] }
libadwaita = { version = "0.9.1", features = ["v1_4"] }
serde_json = "1.0.149"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
serde = { version = "1", features = ["derive"] }
slacko = "0.2"
rusqlite = { version = "0.34", features = ["bundled"] }
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
emojis = "0.8.0"
pulldown-cmark = "0.13.3"
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
futures-util = "0.3.32"
emoji = "0.2.1"
zbus = { version = "5", default-features = false, features = ["tokio"] }

[profile.release]
debug = 1

# ── RPM packaging (cargo-generate-rpm) ──
# Build with:
#   cargo build --release
#   cargo generate-rpm
# Output: target/generate-rpm/sludge-*.rpm
#
# Install once: cargo install cargo-generate-rpm
[package.metadata.generate-rpm]
summary = "A native GTK4/libadwaita Slack client for the Linux desktop"
assets = [
    { source = "target/release/sludge", dest = "/usr/bin/sludge", mode = "755" },
    { source = "assets/dev.sludge.app.desktop", dest = "/usr/share/applications/dev.sludge.app.desktop", mode = "644" },
    { source = "assets/hicolor/48x48/apps/sludge.png",   dest = "/usr/share/icons/hicolor/48x48/apps/sludge.png",   mode = "644" },
    { source = "assets/hicolor/64x64/apps/sludge.png",   dest = "/usr/share/icons/hicolor/64x64/apps/sludge.png",   mode = "644" },
    { source = "assets/hicolor/128x128/apps/sludge.png", dest = "/usr/share/icons/hicolor/128x128/apps/sludge.png", mode = "644" },
    { source = "assets/hicolor/256x256/apps/sludge.png", dest = "/usr/share/icons/hicolor/256x256/apps/sludge.png", mode = "644" },
    { source = "assets/dev.sludge.app.search-provider.ini", dest = "/usr/share/gnome-shell/search-providers/dev.sludge.app.search-provider.ini", mode = "644" },
    { source = "assets/dev.sludge.app.service", dest = "/usr/share/dbus-1/services/dev.sludge.app.service", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/sludge/README.md", mode = "644", doc = true },
]
# Post/postun scriptlets refresh the icon cache and desktop database.
post_install_script = """
/usr/bin/gtk-update-icon-cache /usr/share/icons/hicolor &>/dev/null || :
/usr/bin/update-desktop-database /usr/share/applications &>/dev/null || :
"""
post_uninstall_script = """
/usr/bin/gtk-update-icon-cache /usr/share/icons/hicolor &>/dev/null || :
/usr/bin/update-desktop-database /usr/share/applications &>/dev/null || :
"""

[package.metadata.generate-rpm.requires]
gtk4 = ">= 4.14"
libadwaita = ">= 1.4"
hicolor-icon-theme = "*"

[package.metadata.generate-rpm.recommends]
libnotify = "*"

# ── cargo-deb configuration ──
# Build with:
#   cargo build --release
#   cargo deb --no-build
#
# Install cargo-deb once:
#   cargo install cargo-deb
[package.metadata.deb]
section = "net"
priority = "optional"
depends = "libgtk-4-1 (>= 4.14), libadwaita-1-0 (>= 1.4), hicolor-icon-theme"
recommends = "libcanberra-gtk3-0, libnotify-bin"
copyright = "2026 Emlyn Revell-Nash"
extended-description = """\
Sludge is a native GTK4/libadwaita Slack client. Features include real-time \
messaging via Socket Mode, inline threads, reactions, file uploads, desktop \
notifications, a GNOME Shell search provider, and fuzzy emoji autocomplete."""
assets = [
    ["target/release/sludge", "usr/bin/", "755"],
    ["assets/dev.sludge.app.desktop", "usr/share/applications/", "644"],
    ["assets/hicolor/48x48/apps/sludge.png", "usr/share/icons/hicolor/48x48/apps/sludge.png", "644"],
    ["assets/hicolor/64x64/apps/sludge.png", "usr/share/icons/hicolor/64x64/apps/sludge.png", "644"],
    ["assets/hicolor/128x128/apps/sludge.png", "usr/share/icons/hicolor/128x128/apps/sludge.png", "644"],
    ["assets/hicolor/256x256/apps/sludge.png", "usr/share/icons/hicolor/256x256/apps/sludge.png", "644"],
    ["assets/dev.sludge.app.search-provider.ini", "usr/share/gnome-shell/search-providers/", "644"],
    ["assets/dev.sludge.app.service", "usr/share/dbus-1/services/", "644"],
    ["README.md", "usr/share/doc/sludge/README.md", "644"],
]
maintainer-scripts = "packaging/debian-scripts/"
